--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "terser-webpack-plugin": "^5.3.14",
     "webpack": "^5.99.7",
     "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.21",
